ref: exceptions in web-security-starter ref: JwtAuthenticationTokenFilterTest.java add: README.MD